# langchain-iceberg

./: ,env  .gitignore  .pyiceberg.yaml  ALTERNATIVE_CATALOGS.md  CHANGELOG.md  DOCKER_FIX.md  E2E_FLOW_STATUS.md  EPA_DATA_ANALYSIS.md  FINAL_STATUS.md  FINAL_TEST_REPORT.md  FUTURE_ENHANCEMENTS.md  ISSUES_SUMMARY.md  LICENSE  MARKET_ANALYSIS.md  MINIO_SETUP.md  Makefile  NEXT_STEPS.md  PYICEBERG_TABLE_CREATION.md  QUERY_EXECUTED.md  README.md  REST_CATALOG_STATUS.md  REST_CATALOG_TEST_RESULTS.md  TESTING_COMPLETE.md  TEST_RESULTS.md  WHAT_NOT_WORKING.md  WHY_TABLES_NOT_CREATED.md  create_test_data_and_test_nlp.py  docker-compose.hive.yml  docker-compose.yml  load_data_and_test_nlp.py  load_epa_and_test_nlp.py  pyproject.toml  test_customer_count.py  test_customer_count_working.py  test_e2e_simple.py  test_full_functionality.py  test_nlp_end_to_end.py
examples/: README.md  __init__.py  basic_usage.py  complete_example.py  join_queries.py  nlp_query_example.py  query_planner.py  semantic.yaml  semantic_layer.py  semantic_with_relationships.yaml  time_travel.py
experiments/: EPA_SCHEMA_DOCUMENTATION.md  EXPERIMENT_STATUS.md  FILES_OVERVIEW.md  README.md  SETUP_COMPLETE.md  __init__.py  count_epa_rows.py  download_all_epa_data.py  download_epa_data.py  epa_complete_semantic.yaml  epa_data_loader.py  epa_semantic.yaml  evaluation_framework.py  golden_data.json  golden_data_test_suite.py  load_epa_local.py  quick_test.py  run_experiments.py  run_query_experiments.py  validate_llm_results.py  validation_results_without_semantic.json
experiments/queries/: 01_simple_queries.md  02_medium_queries.md  03_hard_queries.md  04_join_queries.md  05_semantic_queries.md  README.md
langchain_iceberg/: __init__.py  exceptions.py  toolkit.py  version.py
langchain_iceberg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: create_and_populate_tables.py  create_epa_tables.sql  create_tables.sql  create_tables_jdbc_catalog.py  create_tables_minio.py  create_tables_pyiceberg.py  create_tables_pyiceberg_file_catalog.py  create_tables_pyspark.py  create_tables_rest_api.py  create_tables_rest_direct.py  create_tables_simple.py  create_tables_simple_minio.py  create_tables_spark_docker.sh  create_tables_with_spark.sh  init_iceberg.sh  setup_tables.sh
seq_diagram/: hybrid_routing_tree.mmd  query_execution_flow.mmd  tool_generation_flow.mmd
tests/: __init__.py  conftest.py  test_basic.py  test_catalog_tools.py  test_comprehensive.py  test_integration.py  test_nlp_queries.py  test_query_tools.py  test_semantic_yaml.py  test_snapshot_tools.py  test_toolkit.py  test_utils.py  test_validators.py
(+21 files in other folders)
